Semi-succesful implementaion of Beastiary based fully on Race
Just backend coloning, time to get familiar with code